# ece-4122

./: README.md
P2/: Complex.h  fft2d.cc
exercise1/: CMakeLists.txt
exercise2/: e2.h  main.cc
mandelbrot_set/: CMakeLists.txt  glad.c  main.cpp  mandelbrotFragment.fs  mandelbrotVertex.vs  nameFragment.fs  nameVertex.vs  shader.h
mandelbrot_set/lib/glad/: glad.h
vec3/: main.cpp  vec3.h
